Fixes #5: minLength was added to most fields with string type

--- a/output_subschemes/viral_mapping_data.json
+++ b/output_subschemes/viral_mapping_data.json
@@ -3,6 +3,7 @@
   "properties": {
     "error_message": {
       "type": "string",
+      "minLength": 1,
       "$comment": "Dowlny tekst zwracany jako komunikat bledu podczas obliczen. Wymagany, jesli status to Blad"
     },
     "status": {
